--- a/contact.html
+++ b/contact.html
@@ -129,13 +129,10 @@
 						<div class="widget column three">
 							<h4>Latest Tweets</h4>
 							<p>
-							<div id="twitter">
+							<a class="twitter-timeline" href="https://twitter.com/CarolCherotich" width="300"
+  height="300" data-widget-id="656166267464871936">Tweets by @CarolCherotich</a>
+<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+"://platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
 
-								<ul id="twitter_update_list">
-
-								</ul>
-
-							</div>
 
 							<script src="http://twitter.com/javascripts/blogger.js" type="text/javascript"></script>
 
