Made changes to gallery.html

--- a/index.html
+++ b/index.html
@@ -259,26 +259,28 @@
 						</div><!-- chart -->
 					</div>	
 				</section>	
-
+				
+				<!--
 				<section class="row section text-light" style="background-color:#4FC1E9;">
 					<div class="row-content buffer even clear-after">
 						<div class="testimonial-slider centertxt" data-autoplay="5000" data-pagination="true" data-transition="fade" data-autoheight="false">
 							<div class="quote">
 								<p>"Testimonial 1"</p>
 								<div class="author">...</div>
-							</div><!-- quote -->
+							</div><!-- quote 
 							<div class="quote">
 								<p>"Testimonial 2"</p>
 								<div class="author">...</div>
-							</div><!-- quote -->		
+							</div><!-- quote 		
 							<div class="quote">
 								<p>"Testimonial 3."</p>
 								<div class="author">...</div>
-							</div><!-- quote -->							
-						</div><!-- testimonial-slider -->				
+							</div><!-- quote 							
+						</div><!-- testimonial-slider 				
 					</div>
 				</section>						
-
+				-->
+				
 				<!--
 				<section class="row section">
 					<div class="row-content buffer even clear-after">
@@ -391,8 +393,8 @@
 						</div>														
 					</section><!-- top-footer -->
 					<section id="bottom-footer">
-						<p class="keep-left">&copy; 2015 Caroline Cherotich</a>. All Rights Reserved.</p>
-						<p class="keep-right">Design by <a href="http://www.wesongaeric.com" target="_blank">Jayriq</a>.</p>
+						<p class="keep-left" >&copy; 2015 Caroline Cherotich</a>. All Rights Reserved.</p>
+						<p class="keep-right" style="font-color:white;">Design by <a href="http://www.wesongaeric.com" target="_blank">Jayriq.</h4></p>
 					</section><!-- bottom-footer -->			
 				</div><!-- row-content -->	
 			</div><!-- row -->	
