--- a/news.html
+++ b/news.html
@@ -14,7 +14,7 @@
 		<!--[if lt IE 9]>
 		<script src="https://oss.maxcdn.com/libs/respond.js/1.3.0/respond.min.js"></script>
 		<![endif]-->
-		<link rel="icon" href="favicon.ico">
+		<link rel="icon" href="./img/favicon.ico">
 		<link rel="apple-touch-icon" href="img/apple-touch-icon.png">
 		<link rel="apple-touch-icon" sizes="76x76" href="img/apple-touch-icon-76x76.png">
 		<link rel="apple-touch-icon" sizes="120x120" href="img/apple-touch-icon-120x120.png">
@@ -141,7 +141,7 @@
 									</div><!-- blog-excerpt 	
 								</div><!-- blog-excerpt-inner						
 							</a>
-						</article>	-->																	
+						</article>																		
 						<article class="item column three">
 							<a href="#">
 								<figure><img src="http://placehold.it/800x600/ddd/fff&text=Beetle%20image" alt=""><span class="blog-overlay"><i class="icon icon-doc"></i></span></figure>
@@ -150,8 +150,8 @@
 										<h5 class="meta-post">Life Style</h5>
 										<h2>Order is all</h2>
 										<p>Consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-									</div><!-- blog-excerpt -->	
-								</div><!-- blog-excerpt-inner -->								
+									</div><!-- blog-excerpt 
+								</div><!-- blog-excerpt-inner 								
 							</a>
 						</article>												
 						<article class="item column three">
@@ -162,11 +162,11 @@
 										<h5 class="meta-post">Writing</h5>
 										<h2>A neat writer</h2>
 										<p>Consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-									</div><!-- blog-excerpt -->	
-								</div><!-- blog-excerpt-inner -->							
+									</div><!-- blog-excerpt 
+								</div><!-- blog-excerpt-inner							
 							</a>
 						</article>	
-						
+						-->
 						<div class="shuffle-sizer three"></div>
 					</div><!-- grid-items -->
 					<div id="pagination">
